
                              Kiji Scoring Release Notes

Version 0.2.0
  * SCORE-39. FreshKijiTableReader now includes methods which override configured timeout durations.
  * SCORE-13. FreshKijiTableReaderFactory has been replaced with FreshKijiTableReaderBuilder.
  * SCORE-36. Makes the fresh CLI tool visible to the kiji tool launcher.

Version 0.1.0
